AWE/src/objects/Assignment_Setup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Global setting parameter for Weighted Assignment App.</description>
    <fields>
        <fullName>Max_Assignment__c</fullName>
        <label>Max Assignment</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Weight</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Divisor__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Priority Divisor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assignment Setup</label>
</CustomObject>